@@ -10,6 +10,9 @@ Bug fixes
 - Fix a bug where threads were being shown uncollapsed instead of collapsed
   initially, and the collapse/uncollapse buttons didn't work (#2855)
 
+- Strip the proxy prefixes from URLs we know to be proxied (through our "via"
+  service) when normalising (#2861).
+
 0.8.9 (2016-01-11)
 ==================
 
